# cuda-bitcoin-miner

./: CMakeLists.txt  LICENSE  README.md
include/: cuda_mining.h  sha256.h
src/: cuda_mining.cu  main.cpp  sha256.cpp
